--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "axios": "^0.24.0",
     "classnames": "^2.2.6",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
