--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,3 @@
 {
-  "extends": ["next/core-web-vitals", "prettier" ],
-  "plugins": ["prettier"],       
-  "ignorePatterns": [
-    "node_modules",
-    "build",
-    "dist",
-    "public"
-  ]
+  "extends": "next/core-web-vitals"
 }
