--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-VARIABLE="bread"
+CLIENT_ID=sourced from developer.spotify.com
+CLIENT_SECRET=sourced from developer.spotify.com
+SECRET=generated using this command: openssl rand -base64 32
