--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
+    "generate:api-types": "pnpm orval",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
@@ -19,12 +19,15 @@
     "@nuxt/scripts": "0.11.6",
     "@nuxt/test-utils": "3.17.2",
     "@nuxt/ui": "^3.0.2",
+    "@tanstack/vue-query": "^5.74.6",
     "@unhead/vue": "^2.0.3",
-    "nuxt": "^3.16.2"
+    "nuxt": "^3.16.2",
+    "zod": "3.24.3"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.3.0",
     "eslint": "^9.25.1",
+    "orval": "^7.8.0",
     "typescript": "^5.8.3",
     "vue-tsc": "2.2.10"
   }
