--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.3.0",
+    "@tanstack/eslint-plugin-query": "^5.73.3",
     "eslint": "^9.25.1",
     "orval": "^7.8.0",
     "typescript": "^5.8.3",
