--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@nuxt/eslint": "^1.3.0",
     "@tanstack/eslint-plugin-query": "^5.73.3",
+    "@tanstack/vue-query-devtools": "^5.74.6",
     "eslint": "^9.25.1",
     "orval": "^7.8.0",
     "typescript": "^5.8.3",
