--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -22,6 +22,7 @@
     "@tanstack/vue-query": "^5.74.6",
     "@unhead/vue": "^2.0.3",
     "nuxt": "^3.16.2",
+    "vue": "^3.5.0",
     "zod": "3.24.3"
   },
   "devDependencies": {
