--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -21,6 +21,8 @@
     "@nuxt/ui": "^3.1.0",
     "@tanstack/vue-query": "^5.74.6",
     "@unhead/vue": "^2.0.3",
+    "@vueuse/nuxt": "13.1.0",
+    "@vueuse/sound": "^2.1.3",
     "nuxt": "^3.16.2",
     "vue": "^3.5.0",
     "zod": "3.24.3"
